--- a/cssplayground/css/styles.css
+++ b/cssplayground/css/styles.css
@@ -43,6 +43,12 @@ height: 777px;
   width: 42px;
 }
 
+.crab {
+  height: 444px;
+  width: 444px
+
+}
+
 h1 {
   margin-top: 0;
   text-align: center;
@@ -50,6 +56,7 @@ h1 {
 
 
 #yup {
+  height: 377px;
 
 
 }
